# pacman

./: .gitignore  CMakeLists.txt  Makefile
cmake/: DetectPackageManager.cmake  DownloadSDL.cmake  FindSDL.cmake  InstallPackages.cmake
src/: App.cpp  App.h  BckgrObj.cpp  BckgrObj.h  Constants.h  Error.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  Log.cpp  Log.h  Main.cpp  Main.h  Object.h  Pacman.cpp  Pacman.h  PathUtils.cpp  PathUtils.h  Position.h  Settings.cpp  Settings.h  Sounds.cpp  Sounds.h  hScore.cpp  hScore.h
